# justpeek

./: .gitmodules  README.md  jsconfig.json  jsconfig.tooling.json  oskeys.md  package-lock.json  package.json  review.md  setup.sh
.github/workflows/: release.yml
docs/: context.md  example-generation-plan.md  filestogenerate.md  reference-schema-proposal.md  referencefile.md  shortcutimplementation.md  shortcutsprd.md
examples/: justpeek.yaml  people.yaml
examples/ai-tools/: aider.yaml  claude-code.yaml  continue.yaml  copilot-cli.yaml  gemini-cli.yaml  llama-cpp-server.yaml  ollama.yaml  open-webui.yaml  openai-codex-cli.yaml
examples/browsers/: brave.yaml  chrome.yaml  edge.yaml  firefox.yaml  opera.yaml  safari.yaml  vivaldi.yaml  zen.yaml
examples/build-tools/: bazel.yaml  cmake.yaml  gradle-build.yaml  just.yaml  make.yaml  maven-build.yaml  meson.yaml  ninja.yaml  task.yaml
examples/cad-3d-maker-tools/: blender.yaml  cura.yaml  freecad.yaml  fusion-360.yaml  godot.yaml  kicad.yaml  meshlab.yaml  openscad.yaml  orcaslicer.yaml  prusaslicer.yaml  sweet-home-3d.yaml  unity.yaml
examples/container-infra/: helm.yaml  (+11 more)
scripts/: use-dev-index.mjs  use-prod-index.mjs
shortcuts-example/: git.yaml  people.yaml  vscode.yaml
src/: index.html  main.js  panel.js  settings.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  hotkey.rs  lib.rs  main.rs  scanner.rs  watcher.rs
src-tauri/src/detection/: mod.rs  wayland_kde.rs  wayland_sway.rs  windows.rs  x11.rs
(+209 files in other folders)
